vlib/v/parser/tests/not_using_if_comptime_in_comptime_err.vv
interface Checkable {
	test int
}

struct Test {
	test int
}

fn check[T]() bool {
	if T is Checkable {
		return true
	} else {
		return false
	}
}

println(check[Test]())
